# comp-distribuida-cpp

./: CMakeLists.txt  calculoJacobi.cpp  calculoJacobi.h  lecturaDatos.cpp  lecturaDatos.h  main.cpp  persistencia.cpp  persistencia.h  readme.md
